# lrc-tools

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN_REMAINING.md  README.md  SECURITY.md  __init__.py  core.py  install.ps1  install.sh  lrc-tools-auto  lrc_processor_cli.py  lrc_puller_cli.py  lrc_vis_cli.py  lt  processor_main.py  puller.py  pyproject.toml  setup.sh  tui_main.py  uninstall.sh  visualizer_audio.py  visualizer_display.py  visualizer_main.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: api.md  configuration.md  file-formats.md  troubleshooting.md
lrc-tools/: Makefile  README.md  lrc-tools  setup.sh  tui_main.py  uninstall.sh
lrc-tools/docs/: README.md
lrc-tools/tests/: test_tui.py
lrc-tools/tui/: dir_browser.py  song_picker.py
scripts/: build_binary.py  run_tests.sh  verify_install.py
src/lrc_tools/: __init__.py  audio.py  audio_player.py  config.py  core.py  display.py  exporters.py  fonts.py  importers.py  parser.py  player.py  processor.py  puller.py  splitter.py  utils.py  visualizer.py
src/lrc_tools/cli/: fetch.py  process.py  tui.py  vis.py
src/lrc_tools/tui/: __init__.py  app.py  dir_browser.py  song_picker.py
src/lrc_tools/tui/screens/: __init__.py  deps.py  downloader.py  main_menu.py  paths.py  quick.py  settings.py  setup_wizard.py  task.py
src/lrc_tools/tui/widgets/: __init__.py  confirm_dialog.py  status_panel.py
tests/: __init__.py  test_cli.py  test_core.py  test_exporters.py  test_parser.py  test_puller.py  test_splitter.py  test_tui.py  test_utils.py
tui/: __init__.py  app.py  dir_browser.py  song_picker.py
