[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lrc-tools"
version = "0.4.0"
description = "Terminal synced lyrics toolkit with CLI tools and a Textual TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "RicknotDev" }
]
dependencies = [
  "PyYAML>=6.0",
  "rich>=13.0",
]
keywords = ["lyrics", "lrc", "terminal", "tui", "mpris", "playerctl", "music", "cli", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Terminals"
]

[project.optional-dependencies]
fetch = [
  "mutagen>=1.47",
  "syncedlyrics>=1.0",
]
tui = [
  "textual>=0.60",
]
timing = [
  "librosa>=0.10",
]
full = [
  "lrc-tools[fetch,tui,timing]",
]

[project.scripts]
lrc-tools = "lrc_tools.cli.tui:main"
lt = "lrc_tools.cli.tui:main"
lrc-fetch = "lrc_tools.cli.fetch:main"
lrc-processor = "lrc_tools.cli.process:main"
lrc-vis = "lrc_tools.cli.vis:main"

[project.urls]
Homepage = "https://github.com/RicknotDev/lrc-tools"
Repository = "https://github.com/RicknotDev/lrc-tools"

[tool.hatch.build]
include = [
  "src/**/*.py",
  "config_example.yaml",
  "custom_fonts.json",
  "README.md",
  "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["src/lrc_tools"]
